# Accel_Sim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
accel_sim/: cli.py
accel_sim/capture/: ir.py  tracer.py
accel_sim/cost_model/: memory.py  ops.py
accel_sim/devices/: profiles.py
accel_sim/engine/: simulator.py
accel_sim/output/: report.py
tests/: test_cost_model.py  test_simulator.py  test_tracer.py
tests/fixtures/: tiny_transformer.py
