[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accel-sim"
version = "0.1.0"
description = "CPU-based performance estimation tool for accelerator workloads"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
accel-sim = "accel_sim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["accel_sim*"]
